Faking behavior for demo part I

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,8 @@
 						<label for="email">Email:</label>
 						<input type="text" id="email" name="email" class="form-control" placeholder="Enter your email address" />
 					</div>
-					<input type="submit" id="create-user" class="btn btn-primary" value="Start" />
+					<a href="friends.html" class="btn btn-primary">Start</a>
+					<!--<input type="submit" id="create-user" class="btn btn-primary" value="Start" />-->
 				</form>
 			</div>
 		</div>
