--- a/public/friends.html
+++ b/public/friends.html
@@ -21,24 +21,36 @@
 			</p>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-md-6">
-				<h5>Invited Friends</h5>
-				<ul>
-					<li><span class="light on"></span>Sue Doe-Nym</li>
-					<li><span class="light"></span>John Adams</li>
-				</ul>
+			<div class="col-xs-12 col-md-6 hide" id="zero" class="hide">
+				<form role="form">
+					<div class="form-group">
+						<label for="email">Email:</label>
+						<input type="text" id="email" name="email" class="form-control" placeholder="Enter your friend's email address" />
+					</div>
+					<input type="submit" class="btn btn-primary" value="Send Invite" id="send" />
+				</form>
 			</div>
 		</div>
 		<div class="row">
+			<div class="col-xs-12 col-md-6 hide" id="one">
+				<h5>Invited Friends</h5>
+				<ul>
+					<li><span id="two" class="light"></span>sue@gmail.com</li>
+					<li id="oneprime" class="hide"><span id="three" class="light"></span>john@yahoo.com</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row" id="btns">
 			<div class="col-xs-12 col-md-6">
 				<form action="post" role="form">
-					<input type="button" class="btn btn-success" value="Invite a Friend" />
-					<input type="submit" class="btn btn-primary" value="Start Scrounging!" />
+					<input type="button" class="btn btn-success" value="Invite a Friend" id="invite" />
+					<a href="mission.html" class="btn btn-primary">Start Scrounging!</a>
+					<!--<input type="submit" class="btn btn-primary" value="Start Scrounging!" id="start" />-->
 				</form>
 			</div>
 		</div>
 	</div>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/friend.js"></script>
 </body>
 </html>
