Faking behavior for demo part II

--- a/public/mission.html
+++ b/public/mission.html
@@ -26,7 +26,7 @@
 				<ul class="photo-list">
 					<li>
 						<img src="images/AprilCharm.jpg" class="thumbnail" />
-						<span class="fa fa-4x fa-check"></span>
+						<span id="one" class="fa fa-4x"></span>
 						<a href="#" class="title">Art Piece 1</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
@@ -35,7 +35,7 @@
 					</li>
 					<li>
 						<img src="images/Banned.jpg" class="thumbnail" />
-						<span class="fa fa-4x"></span>
+						<span id="two" class="fa fa-4x"></span>
 						<a href="#" class="title">Art Piece 2</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
@@ -44,7 +44,7 @@
 					</li>
 					<li>
 						<img src="images/bee-garden.jpg" class="thumbnail" />
-						<span class="fa fa-4x"></span>
+						<span id="three" class="fa fa-4x"></span>
 						<a href="#" class="title">Art Piece 3</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
@@ -57,7 +57,8 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<form action="post" role="form">
-					<input type="submit" class="btn btn-primary" value="I'm Done!" />
+					<!--<input type="submit" class="btn btn-primary" value="I'm Done!" />-->
+					<a href="done.html" class="btn btn-primary">I'm Done!</a>
 				</form>
 			</div>
 		</div>
