--- a/public/done.html
+++ b/public/done.html
@@ -31,7 +31,8 @@
 		<div class="row">
 			<div class="col-xs-12 col-md-6">
 				<form action="post" role="form">
-					<input type="button" class="btn btn-primary" value="Play Again!" />
+					<!--<input type="button" class="btn btn-primary" value="Play Again!" />-->
+					<a href="mission.html" class="btn btn-primary">Play Again!</a>
 				</form>
 			</div>
 		</div>
