Faking behavior for demo part IV

--- a/public/mission.html
+++ b/public/mission.html
@@ -30,7 +30,7 @@
 						<a href="#" class="title">Art Piece 1</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
-							<a href="#">View Map</a><a href="#" id="onelink">Take Photo</a>
+							<a href="mymap4.html?name=AprilCharm&lat=39.993072&long=-105.113034">View Map</a><a href="#" id="onelink">Take Photo</a>
 						</div>
 					</li>
 					<li>
@@ -39,7 +39,7 @@
 						<a href="#" class="title">Art Piece 2</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
-							<a href="#">View Map</a><a href="#" id="twolink">Take Photo</a>
+							<a href="mymap4.html?name=Banned&lat=40.001264&long=-105.090482">View Map</a><a href="#" id="twolink">Take Photo</a>
 						</div>
 					</li>
 					<li>
@@ -48,7 +48,7 @@
 						<a href="#" class="title">Art Piece 3</a>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
 						<div class="actions">
-							<a href="#">View Map</a><a href="#" id="threelink">Take Photo</a>
+							<a href="mymap4.html?name=BeeGarden&lat=39.99476&long=-105.092955">View Map</a><a href="#" id="threelink">Take Photo</a>
 						</div>
 					</li>
 				</ul>
